actually fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply dark:bg-stone900;
+    @apply bg-stone-100;
+}
